Fixed some styles and spacing issues

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,5 +1,6 @@
 .header {
     background-color: $blue;
+    padding: $m-size;
 }
 
     .header-content {
